objects/Survey_Snap__c.object
<CustomObject>
    <fields>
        <fullName>Overall_Satisfaction__c</fullName>
        <label>Overall Satisfaction</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Name__c</fullName>
        <label>Survey Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Surveys__c</fullName>
        <label># of Surveys</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Survey Snap</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Survey Snap {0}</displayFormat>
        <label>Survey Snap Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Snaps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>